2007-03-27  Yves Combe <yves@ycombe.net>

	Add SDL* frameworks copy in bundle.

	* Makefile.am:
	* macosx/Info-gnustep.plist:
	* macosx/Info.plist:
	* macosx/PkgInfo:

2007-03-26  Yves Combe <yves@ycombe.net>

	Small fix for GNUstep compatibility

	* Makefile.am:

2007-03-26  Yves Combe <yves@ycombe.net>

	Continue work on OSX:
	- fix .config not created (oups).
	- fix Lang in OSX case.

	* src/gcompris/gcompris-nsbundle.m:
	* src/gcompris/properties.c:
	(gc_prop_default_config_directory_get):

2007-03-26  Yves Combe <yves@ycombe.net>

	continue wrok on NSBundle for OSX.
	works on osX.
	- TODO: fix it does not create .config and sqlite fails.
	- TODO: LANG does not work.
	
	* Makefile.am:
	* macosx/PkgInfo:

2007-03-25  Yves Combe <yves@ycombe.net>

	Try to fix the recursion needed by install_name_tool for osx. Untested.

	* Makefile.am:

2007-03-25  Yves Combe <yves@ycombe.net>

	clean ObjC code using standard openstep functions.

	* Makefile.am:
	* configure.in:
	* src/gcompris/gcompris-nsbundle.m:

2007-03-24  Yves Combe <yves@ycombe.net>

	Add icons and Info.plist. Tested with GNUstep.

	* Makefile.am:
	* macosx/Info.plist:
	* macosx/gcompris.svg:

2007-03-24  Yves Combe <yves@ycombe.net>

	continue work on NSBundle.

	* Makefile.am:
	* macosx/fonts.conf:
	* macosx/pangorc:
	* src/gcompris/gcompris-nsbundle.m:

2007-03-23  Yves Combe <yves@ycombe.net>

	add python modules in bundle.
	TODO: install_tool_name as to be ru on lib/lib* too.

	* Makefile.am:
	* macosx/build-gtk.sh:
	* src/gcompris/gcompris-nsbundle.m:

2007-03-23  Yves Combe <yves@ycombe.net>

	segfault fixed.

	* src/gcompris/gcompris-nsbundle.m:

2007-03-23  Yves Combe <yves@ycombe.net>

	Set GTK to run from bundle. TODO: fix segfault.

	* Makefile.am:
	* configure.in:
	* macosx/pangorc:
	* src/gcompris/Makefile.am:
	* src/gcompris/gcompris-nsbundle.m:

2007-03-22  Yves Combe <yves@ycombe.net>

	fix and continue osx bundle creation

	* Makefile.am:

2007-03-22  Yves Combe <yves@ycombe.net>
